argocd/apps/qdrant/config/qdrant-auth-Middleware.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: qdrant
spec:
  type: ExternalName
  externalName: oauth2-proxy.traefik.svc.cluster.local
  ports:
    - port: 4180
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qdrant-forward-auth
  namespace: qdrant
spec:
  forwardAuth:
    address: http://oauth2-proxy.traefik.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Set-Cookie
    authRequestHeaders:
      - Cookie
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qdrant-oauth2-errors
  namespace: qdrant
spec:
  errors:
    status:
      - "401"
      - "403"
    statusRewrites:
      "401": "302"
      "403": "302"
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/sign_in?rd={url}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qdrant-auth
  namespace: qdrant
spec:
  chain:
    middlewares:
      - name: qdrant-oauth2-errors
      - name: qdrant-forward-auth
