argocd/apps/qdrant/config/qdrant-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qdrant
  namespace: qdrant
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-qdrant
  hostnames:
    - qdrant.nss.jkzl.eu
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: qdrant-auth
      backendRefs:
        - name: qdrant
          port: 6333
